0.3.9
--------------------------------------------------------
- BUG修复模块
  * 修复相对协议模块载入地址错误

0.3.8   (2017-02-09)
--------------------------------------------------------
- 功能支持
  * 剪切板支持跨域flash引入
  * NEJ 模块文件载入支持文件名版本号

- BUG修复模块
  * 修复 regularModule build 参数输入


0.3.7   (2017-01-09)
--------------------------------------------------------
- 功能支持
  * 支持缓存列表填充验证时重写列表项验证逻辑
  * 支持缓存在 filter 阶段直接返回结果阻止发送请求
  * 增加 __getListReqKey/__getItemReqKey 取请求标识
  * 支持 __doSendRequest 时使用 options 配置请求地址
  * __doSendRequest 过程的事件支持输入 cnf 配置信息对象

- BUG修复模块
  * 修正 util/cache/list 下 getList/getItem 的 ext 参数回传异常


0.3.5   (2016-11-22)
--------------------------------------------------------
- BUG修复模块
  * 修正 IE8 下取 DOM 属性异常问题


0.3.4   (2016-11-16)
--------------------------------------------------------
- 功能支持
  * 支持缓存配置 type 属性

0.3.3   (2016-10-31)
--------------------------------------------------------
- 功能支持
  * 缓存基类支持 _$dump 静态接口
  * 支持 JSONP 接口调用

- BUG修复模块
  * cache 基类 __doSendRequest 接口判空逻辑调整
  * XDR 请求时针对字符串数据序列化的问题

0.3.2   (2016-10-12)
--------------------------------------------------------
- NEJ.define 注入增加 css 插件支持

0.3.1   (2016-08-27)
--------------------------------------------------------
- BUG修复模块
  * util/dispatcher/module 修复 regularModule init 参数
  * 删除文档中单页模块的 template 打包标记

0.3.0   (2016-07-18)
--------------------------------------------------------
- BUG修复模块
  * base/klass 清除无效条件判断
  * base/util string2object/object2string接口处理不合法URL异常
  * util/cache/list 清除请求队列异常
  * util/module/list 瀑布流列表分页问题
  * define.js 在head中引入的异常

- 功能支持
  * util/dispatcher/dispatcher 重定向时模块退出判断支持
  * util/dispatcher/module 模块构建时支持UMI配置参数

0.2.8   (2016-03-29)
0.2.7
--------------------------------------------------------
- 增加regularjs模块的支持
  * util/dispatcher/regularModule.js
- 功能增加
  * base/element 增加 _$getParent 接口
  * util/list/module 增加 _$nextPage,_$prevPage,_$pageTo 接口

0.2.6   (2015-09-07)
0.2.5
--------------------------------------------------------
- 兼容处理