@@ -2,6 +2,7 @@
 --------------------------------------------------------
 - BUG修复模块
   * 修复相对协议模块载入地址错误
+  * 修复platform模块无法判断Google Chrome for IOS
 
 0.3.8   (2017-02-09)
 --------------------------------------------------------
